# quant-project

./: .gitignore  Makefile  README.md  data_download_guide.md  notebooks_export.txt  pyproject.toml  walkthrough.md
config/: config.yaml
notebooks/: 01_setup_and_download.ipynb  02_process_data.ipynb  03_feature_engineering.ipynb  04_panel_eda.ipynb  05_regression_analysis.ipynb  06_visualization.ipynb  07_weekly_panel_analysis.ipynb
outputs/reports/: annual_vs_weekly_comparison.md
outputs/tables/: model_H1_weekly_FE_summary.txt  model_H2_weekly_FE_summary.txt  model_H2_weekly_pooled_summary.txt  model_H3_weekly_FE_excl2020_summary.txt  model_H3_weekly_FE_excl_covid_summary.txt  model_H3_weekly_FE_summary.txt  model_H3_weekly_pooled_summary.txt  regression_results.csv  regression_results_weekly.csv  summary_by_region.csv  summary_stats.csv
scripts/: build_weekly_notebook.py  download_data.py  run_analysis.py  run_pipeline.py
src/: __init__.py
src/analysis/: __init__.py  diagnostics.py  eda.py  panel_dataset.py  panel_regression.py  weekly_panel_dataset.py  weekly_regression.py
src/data/: __init__.py  download_earthmover.py  download_era5.py  nuts2_boundaries.py  process_climate.py  process_istat.py  process_mortality.py  process_socioeconomic.py
src/features/: __init__.py  heatwave.py  mortality_rates.py  rsvi.py  temperature.py  weekly_climate.py  weekly_mortality.py
src/utils/: __init__.py  config.py  constants.py  io.py
src/visualization/: case_studies.py  maps.py  regression_plots.py  (+1 more)
tests/: test_heatwave.py  test_panel_regression.py  test_rsvi.py
